[gd_scene load_steps=4 format=3 uid="uid://c4onv66ohjluj"]

[ext_resource type="Script" path="res://actors/objs/MissileLauncher.gd" id="1_iwp7f"]
[ext_resource type="AudioStream" uid="uid://cucpelcy5a2ug" path="res://Assets/sfx/fire_missile_homing.wav" id="2_418cb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2up2k"]
radius = 2000.0

[node name="Weapon" type="Node2D"]
script = ExtResource("1_iwp7f")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="missileSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_418cb")
volume_db = -23.817

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_2up2k")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
